# rose

./: .coveragerc  .gitignore  .prettierignore  Makefile  README.md  bump_version.sh  conftest.py  flake.nix  pyproject.toml  setup.py  yoyo.ini
rose-rs/: CLAUDE.md  Cargo.toml  DEBT.md  FUTURE_WORK.md  HANDOFF_NOTES.md  Makefile  PLAN.md  REPORT.md  REPORT_RULES_TEST.md  default.nix  dump_tags.py  py-impl-reference  rose-py-api-spec.md  rose-py-features-dependencies.md  rose-rs-legacy-implementation-plan.md  rustfmt.toml  test_template.rs
rose-rs/audit/: milestone-01.md  milestone-02.md  milestone-03.md
rose-rs/plan/: 00-summary.md  01-foundation.md  02-genres.md  03-configuration.md  04-templates.md  05-datafiles.md  06-rule-parser.md  07-audio-tags.md  08-cache.md  09-rules-engine.md  10-releases.md  11-tracks.md  12-collages.md  13-playlists.md  CRITIQUE.md
rose-rs/src/: audiotags.rs  audiotags_test.rs  cache.rs  cache.sql  cache_py.rs  cache_update.rs  collages.rs  collages_test.rs  common.rs  common_test.rs  config.rs  config_test.rs  datafiles.rs  datafiles_test.rs  debug_tags.rs  error.rs  errors.rs  genre_hierarchy.json  genre_hierarchy.rs  genre_hierarchy_test.rs  lib.rs  playlists.rs  playlists_test.rs  releases.rs  releases_test.rs  rule_parser.rs  rule_parser_test.rs  rules.rs  rules_test.rs  templates.rs  templates_test.rs  test_genre.rs  test_utils.rs  testing.rs  tracks.rs  tracks_test.rs
rose-rs/testdata/Playlist 1/: Lala Lisa.toml
rose-rs/testdata/Tagger/: track1.flac
rose-rs/testdata/Test Release 2/: .rose.ilovecarly.toml  01.m4a  02.m4a
rose-rs/testdata/Test Release 3/: 02.m4a
rose-rs/tests/: audiotags_basic_test.rs  audiotags_integration_test.rs
rose-rs/thinking/: rose-py-architecture.md  rose-py-unit-tests-documentation.md  rose-rs-actual-behaviors-analysis.md  rose-rs-critical-implementation-notes.md  rose-rs-implementation-plan-final-1.md  rose-rs-implementation-plan-final-2.md  rose-rs-implementation-plan-final-3.md  rose-rs-implementation-plan-final-4.md  rose-rs-new-tdd-implementation-plan.md  rose-rs-plan-addendum.md
(+197 files in other folders)
