[package]
name = "rose-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
sha2 = "0.10"
regex = "1.10"
lazy_static = "1.4"
unicode-normalization = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
